[gd_scene load_steps=3 format=3 uid="uid://cg1vwa0gdy5pi"]

[ext_resource type="Script" path="res://Scenes/grappling_hook.gd" id="1_54g25"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0fl45"]
radius = 18.0278

[node name="GrapplingHook" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_54g25")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0fl45")

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
